# aws-cdk-blog-serverless

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  template.yml
aws_cdk_blog_serverless/: aws_cdk_blog_serverless_stack.py
lambda/post/: posts_lambda_function.py  requirements.txt
lambda/theme/: themes_lambda_function.py
lambda/user/: email_filter_lambda.py  user_management_lambda.py
swagger/: swagger_new.yaml
tests/unit/: test_aws_cdk_blog_serverless_stack.py
